# QEDispInv

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
demo/lvl-l4/: .gitignore  config.toml  data_noise-01.txt  model_init.txt
demo/syn-crustmantle/: config.toml  mref.txt
demo/syn-nearsurface/: .gitignore  config.toml  data.txt  model_data.txt  mref.txt
doc/: INSTALL.md  TUTORIAL.md  forward.md  inversion.md  secfunc.md  vs2model.md
fortran/: CMakeLists.txt
include/: disp.hpp  model.hpp  problem.hpp  secfunc.hpp  swegn96.hpp  tqdm.hpp  utils.hpp
python/: create_reference_model.py  plot_disp.py  plot_inv.py  plot_kernel.py  plot_model.py  plot_secfunc.py  print_model.py
src/: CMakeLists.txt  disp.cc  main_forward.cc  main_inversion.cc  main_secfunc.cc  model.cc  problem.cc  secfunc.cc  swegn96.cc  utils.cc
